force-app/main/default/objects/Rental__c/Rental__c.object-meta.xml
<CustomObject>
    <description>Contains information of a Rental that a User has of a given Stock.</description>
    <label>Rental</label>
    <nameField>
        <displayFormat>R-{MMDDYY}-{0000}</displayFormat>
        <label>Rental Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>