force-app/main/default/objects/Rental__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <defaultValue>TODAY() + 3</defaultValue>
    <description>Date that the rental is due to be returned.</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>