force-app/main/default/objects/Rental__c/fields/IsLate__c.field-meta.xml
<CustomField>
    <fullName>IsLate__c</fullName>
    <description>Is Today after the Due Date?</description>
    <formula>TODAY() &gt; DueDate__c &amp;&amp; ISPICKVAL(Status__c, &#39;Active&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late</label>
    <type>Checkbox</type>
</CustomField>