force-app/main/default/objects/Rental__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>