force-app/main/default/objects/Rental__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Stock__r.Title__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>